[package]
name = "linebased"
version = "0.3.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "MIT OR Apache-2.0"
description = "Add a TCP query port to any program"
repository = "https://github.com/jwilm/linebased"
keywords = ["tcp", "server", "command", "query"]
documentation = "http://blog.jwilm.io/linebased/linebased/index.html"

[dependencies]
mio = "0.5"
log = "0.3"
